--- a/res/layout/activity_gallery.xml
+++ b/res/layout/activity_gallery.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:layout_height="match_parent">
 
-	<android.support.v4.view.ViewPager
-		android:id="@+id/entry_view_pager"
+	<!-- Entry page -->
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"/>
+		android:layout_height="match_parent"
+		android:orientation="vertical">
+	    
+		<!-- Tab control -->
+		
+		<!-- View pager -->
+	    <android.support.v4.view.ViewPager
+			android:id="@+id/entry_view_pager"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"/>
+	
+	</LinearLayout>
 
-</LinearLayout>
+	<!-- Grid view -->
+	<LinearLayout android:id="@+id/grid_view_container"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="#000000"
+		android:orientation="vertical"
+		android:visibility="gone">
+	    
+		<FrameLayout android:id="@+id/grid_view_fragment_container"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"/>
+	
+	</LinearLayout>
+	
+</RelativeLayout>
