--- a/res/layout/activity_gallery.xml
+++ b/res/layout/activity_gallery.xml
@@ -5,12 +5,32 @@
 	android:background="@color/gallery_activity_background">
 
 	<!-- Entry page -->
-	<LinearLayout
+	<LinearLayout android:id="@+id/entry_page_container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical">
 	    
 		<!-- Tab control -->
+		<LinearLayout android:id="@+id/entry_page_tab_container"
+			android:layout_width="match_parent"
+			android:layout_height="?android:attr/actionBarSize"
+			android:orientation="horizontal">
+			
+		    <TextView android:id="@+id/entry_page_tab_grid_view"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:text="@string/entry_page_tab_default_grid_view"/>
+
+			<TextView android:id="@+id/entry_page_tab_media_set_list"
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:layout_weight="1"
+				android:gravity="center"
+				android:text="@string/entry_page_tab_media_set_list"/>
+		    
+		</LinearLayout>
 		
 		<!-- View pager -->
 	    <android.support.v4.view.ViewPager
