--- a/res/layout/fragment_gridview_item.xml
+++ b/res/layout/fragment_gridview_item.xml
@@ -39,7 +39,7 @@
 	        android:id="@+id/item_selected"
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
-	        android:src="@drawable/ic_selected"
+	        android:src="@drawable/button_selected"
 	        android:scaleType="center"
 	        android:visibility="gone"/>
 </RelativeLayout>
