--- a/res/menu/selection_toolbar_menu.xml
+++ b/res/menu/selection_toolbar_menu.xml
@@ -2,19 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item android:id="@+id/toolbar_addto" 
-        android:icon="@drawable/ic_addto" 
+        android:icon="@drawable/button_addto" 
         android:title="@string/toolbar_selection_addto"
         android:showAsAction="always"
     />
     
     <item android:id="@+id/toolbar_share" 
-        android:icon="@drawable/ic_share" 
+        android:icon="@drawable/button_share_normal" 
         android:title="@string/toolbar_selection_share"
         android:showAsAction="always"
     />
     
     <item android:id="@+id/toolbar_delete" 
-        android:icon="@drawable/ic_delete" 
+        android:icon="@drawable/button_delete_normal" 
         android:title="@string/toolbar_selection_delete"
         android:showAsAction="always"
     />
