Add long press behavior in MediaSetListFragment to enter selection mode.

--- a/res/layout/layout_media_set_list_item.xml
+++ b/res/layout/layout_media_set_list_item.xml
@@ -27,6 +27,14 @@
 	    	android:layout_centerVertical="true"
 	    	style="@style/MediaSetListItemSizeText"/>
 	    
+	    <ImageView 
+	        android:id="@+id/selected_icon"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignParentRight="true"
+	        android:layout_centerVertical="true"
+	        android:src="@drawable/button_selected"/>
+	    
 	</RelativeLayout>
 	
 	<ImageView 
