--- a/res/layout/fragment_media_set_list.xml
+++ b/res/layout/fragment_media_set_list.xml
@@ -9,8 +9,7 @@
         android:id="@+id/media_set_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:visibility="gone">   
+        android:layout_alignParentTop="true">   
     </Toolbar>
     
     <ListView
