--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <resources>
 
+    <!-- Action bar -->
+    <dimen name="action_bar_height">50dp</dimen>
+    
 	<!-- Entry page -->
 	<dimen name="entry_page_tab_text">20dp</dimen>
 	<dimen name="entry_page_margin">5dp</dimen>
