Update the way of hiding tool bar.

--- a/res/layout/fragment_media_set_list.xml
+++ b/res/layout/fragment_media_set_list.xml
@@ -8,9 +8,8 @@
     <Toolbar 
         android:id="@+id/media_set_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true">   
-    </Toolbar>
+        android:layout_height="@dimen/action_bar_height"
+        android:layout_alignParentTop="true"/>   
     
     <ListView
         android:id="@+id/media_set_listview"
