--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,7 +1,14 @@
 <resources>
 
-    <!-- Action bar -->
-    <dimen name="action_bar_height">50dp</dimen>
+	<!-- Action bar -->
+	<dimen name="action_bar_height">50dp</dimen>
+
+	<!-- Deletion dialog -->
+	<dimen name="deletion_dialog_progress_bar_height">5dp</dimen>
+	<dimen name="deletion_dialog_progress_bar_margin_bottom">24dp</dimen>
+	<dimen name="deletion_dialog_progress_bar_margin_left">24dp</dimen>
+	<dimen name="deletion_dialog_progress_bar_margin_right">24dp</dimen>
+	<dimen name="deletion_dialog_progress_bar_margin_top">24dp</dimen>
     
 	<!-- Entry page -->
 	<dimen name="entry_page_tab_text">20dp</dimen>
