--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,24 +1,17 @@
 <resources>
 
-    <!--  -->
-    <style name="AppBaseTheme" parent="android:Theme.Material">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-         -->
-            <item name="android:windowActionBar">false</item>
-        
-    </style>
+	<!-- Application -->
+	<style name="AppBaseTheme" parent="@android:style/Theme.Material">
+		<item name="android:windowActionBar">false</item>
+	</style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowNoTitle">true</item>
-    </style>
+	<!-- Application theme. -->
+	<style name="AppTheme" parent="AppBaseTheme">
+		<item name="android:windowActionBar">false</item>
+		<item name="android:windowNoTitle">true</item>
+	</style>
     
-    <!-- Base text -->
+	<!-- Base text -->
 	<style name="BaseText">
 		<item name="android:fontFamily">sans-serif</item>
 	</style>
@@ -34,6 +27,8 @@
 	
 	<!-- Gallery window -->
 	<style name="GalleryWindow" parent="@android:style/Theme.Material.NoActionBar">
+		<item name="android:alertDialogTheme">@android:style/Theme.Material.Light.Dialog.Alert</item>
+		<item name="android:dialogTheme">@android:style/Theme.Material.Light.Dialog</item>
 	</style>
 	
 	<!--media set list item title -->
@@ -47,5 +42,10 @@
 		<item name="android:textColor">@color/media_set_list_item_size</item>
 		<item name="android:textSize">@dimen/media_set_list_item_title_text_size</item>
 	</style>
+	
+	<!-- Widget -->
+	<style name="Widget" parent="@android:style/Widget.Material"/>
+	<style name="Widget.ProgressBar" parent="@android:style/Widget.Material.ProgressBar"/>
+	<style name="Widget.ProgressBar.Horizontal" parent="@android:style/Widget.Material.ProgressBar.Horizontal"/>
 
 </resources>
