--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -14,6 +14,14 @@
 	<dimen name="entry_page_tab_text">20dp</dimen>
 	<dimen name="entry_page_margin">5dp</dimen>
 	
+	<!-- Media details dialog -->
+	<dimen name="media_details_dialog_content_margin_bottom">12dp</dimen>
+	<dimen name="media_details_dialog_content_margin_end">16dp</dimen>
+	<dimen name="media_details_dialog_content_margin_start">16dp</dimen>
+	<dimen name="media_details_dialog_content_margin_top">12dp</dimen>
+	<dimen name="media_details_dialog_item_margin">4dp</dimen>
+	<dimen name="media_details_dialog_item_text_size">16sp</dimen>
+	
 	<!-- Media set list fragment -->
 	<dimen name="media_set_list_add_album_button_size">56dp</dimen>
 	<dimen name="media_set_list_add_album_button_margin_right">25dp</dimen>
