--- a/res/layout/activity_gallery.xml
+++ b/res/layout/activity_gallery.xml
@@ -13,7 +13,7 @@
 		<!-- Tab control -->
 		<LinearLayout android:id="@+id/entry_page_tab_container"
 			android:layout_width="match_parent"
-			android:layout_height="@dimen/action_bar_height"
+			android:layout_height="?android:attr/actionBarSize"
 			android:orientation="horizontal">
 			
 		    <TextView android:id="@+id/entry_page_tab_grid_view"
