--- a/res/layout/fragment_media_set_list.xml
+++ b/res/layout/fragment_media_set_list.xml
@@ -8,7 +8,7 @@
     <Toolbar 
         android:id="@+id/media_set_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/action_bar_height"
+        android:layout_height="?android:attr/actionBarSize"
         android:layout_alignParentTop="true"/>   
     
     <ListView
