--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -29,10 +29,11 @@
 	
 	<!-- Gallery window -->
 	<style name="GalleryWindow" parent="@android:style/Theme.Material.NoActionBar">
+		<item name="android:actionBarSize">@dimen/action_bar_height</item>
 		<item name="android:alertDialogTheme">@android:style/Theme.Material.Light.Dialog.Alert</item>
-		<item name="android:dialogTheme">@android:style/Theme.Material.Light.Dialog</item>
 		<item name="android:colorControlNormal">@color/gallery_seek_bar_background</item>
 		<item name="android:colorControlActivated">@color/gallery_seek_bar_primary</item>
+		<item name="android:dialogTheme">@android:style/Theme.Material.Light.Dialog</item>
 	</style>
 	
 	<!--media set list item title -->
