--- a/res/layout/activity_gallery.xml
+++ b/res/layout/activity_gallery.xml
@@ -5,46 +5,53 @@
 	android:background="@color/gallery_activity_background">
 
 	<!-- Entry page -->
-	<LinearLayout android:id="@+id/entry_page_container"
+	<RelativeLayout android:id="@+id/entry_page_container"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="vertical">
+		android:layout_height="match_parent">
 	    
 		<!-- Tab control -->
-		<LinearLayout android:id="@+id/entry_page_tab_container"
+		<Toolbar android:id="@+id/entry_page_tabs"
 			android:layout_width="match_parent"
 			android:layout_height="?android:attr/actionBarSize"
-			android:orientation="horizontal">
+			style="@style/Widget.ActionBar">
 			
-		    <TextView android:id="@+id/entry_page_tab_grid_view"
+			<LinearLayout android:id="@+id/entry_page_tab_container"
 				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:text="@string/entry_page_tab_default_grid_view"/>
-
-			<TextView android:id="@+id/entry_page_tab_media_set_list"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_weight="1"
-				android:gravity="center"
-				android:text="@string/entry_page_tab_media_set_list"/>
+				android:layout_height="?android:attr/actionBarSize"
+				android:orientation="horizontal">
+				
+			    <TextView android:id="@+id/entry_page_tab_grid_view"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:layout_weight="1"
+					android:gravity="center"
+					android:text="@string/entry_page_tab_default_grid_view"/>
+	
+				<TextView android:id="@+id/entry_page_tab_media_set_list"
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:layout_weight="1"
+					android:gravity="center"
+					android:text="@string/entry_page_tab_media_set_list"/>
 		    
-		</LinearLayout>
+			</LinearLayout>
+			
+		</Toolbar>
 		
 		<!-- View pager -->
 	    <com.oneplus.gallery.widget.ViewPager
 			android:id="@+id/entry_view_pager"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"/>
+			android:layout_height="match_parent"
+			android:layout_below="@id/entry_page_tabs"/>
 	
-	</LinearLayout>
+	</RelativeLayout>
 
 	<!-- Grid view -->
 	<LinearLayout android:id="@+id/grid_view_container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="#000000"
+		android:background="@color/gallery_activity_background"
 		android:orientation="vertical"
 		android:focusable="true"
 		android:visibility="gone">
@@ -59,7 +66,7 @@
 	<LinearLayout android:id="@+id/filmstrip_container"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="#000000"
+		android:background="@color/gallery_activity_background"
 		android:orientation="vertical"
 		android:focusable="true"
 		android:visibility="gone">
