--- a/res/layout/fragment_media_set_list.xml
+++ b/res/layout/fragment_media_set_list.xml
@@ -9,7 +9,8 @@
         android:id="@+id/media_set_toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:layout_alignParentTop="true"/>   
+        android:layout_alignParentTop="true"
+        style="@style/Widget.ActionBar"/>   
     
     <ListView
         android:id="@+id/media_set_listview"
