--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -14,6 +14,18 @@
 	<dimen name="entry_page_tab_text">20dp</dimen>
 	<dimen name="entry_page_margin">5dp</dimen>
 	
+	<!-- Grid view -->
+	<dimen name="gridview_item_height">89dp</dimen>
+	<dimen name="gridview_item_spacing_horizontal">1dp</dimen>
+	<dimen name="gridview_item_spacing_vertical">1dp</dimen>
+	<dimen name="gridview_item_width">89dp</dimen>
+	<dimen name="gridview_no_photo_icon_background_height">160dp</dimen>
+	<dimen name="gridview_no_photo_icon_background_margin_inner">7dp</dimen>
+	<dimen name="gridview_no_photo_icon_background_width">160dp</dimen>
+	<dimen name="gridview_no_photo_icon_margin_top">138dp</dimen>
+	<dimen name="gridview_no_photo_text_margin_top">24dp</dimen>
+	<dimen name="gridview_no_photo_text_size">16dp</dimen>
+	
 	<!-- Media details dialog -->
 	<dimen name="media_details_dialog_content_margin_bottom">12dp</dimen>
 	<dimen name="media_details_dialog_content_margin_end">16dp</dimen>
@@ -35,10 +47,6 @@
 	<dimen name="media_set_list_item_title_text_size">16dp</dimen>
 	<dimen name="media_set_list_item_title_margin_left">16dp</dimen>
 	<dimen name="media_set_list_item_cover_image_height">120sp</dimen>
-	
-	<!-- GridView Fragment item-->
-	<dimen name="gridview_item_height">89dp</dimen>
-	<dimen name="gridview_item_width">89dp</dimen>
 	
 	<!-- Filmstrip Fragment -->
 	<dimen name="filmstrip_item_play_button_width_height">63dp</dimen>
