--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -30,6 +30,7 @@
 	<!-- Gallery window -->
 	<style name="GalleryWindow" parent="@android:style/Theme.Material.NoActionBar">
 		<item name="android:actionBarSize">@dimen/action_bar_height</item>
+		<item name="android:actionBarStyle">@style/Widget.ActionBar</item>
 		<item name="android:alertDialogTheme">@android:style/Theme.Material.Light.Dialog.Alert</item>
 		<item name="android:colorControlNormal">@color/gallery_seek_bar_background</item>
 		<item name="android:colorControlActivated">@color/gallery_seek_bar_primary</item>
@@ -50,6 +51,9 @@
 	
 	<!-- Widget -->
 	<style name="Widget" parent="@android:style/Widget.Material"/>
+	<style name="Widget.ActionBar" parent="@android:style/Widget.Material.ActionBar">
+		<item name="android:background">@color/action_bar_background</item>
+	</style>
 	<style name="Widget.ProgressBar" parent="@android:style/Widget.Material.ProgressBar"/>
 	<style name="Widget.ProgressBar.Horizontal" parent="@android:style/Widget.Material.ProgressBar.Horizontal"/>	
 	
